--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/NOTICE'
+    }
 }
 
 dependencies {
@@ -46,4 +53,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
