--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
     implementation 'com.google.code.gson:gson:2.8.2'
-    
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.31'
+    implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
 }
