--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ captures/
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
+build.gradle
+.idea/modules.xml
+app/build.gradle
