--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,11 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.31'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
-
-
+    implementation 'top.zibin:Luban:1.1.3'
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
 }
+
 repositories {
     mavenCentral()
 }
