--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'top.zibin:Luban:1.1.3'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    implementation 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
 }
 
 repositories {
