--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao' // apply plugin
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
@@ -61,9 +62,9 @@ dependencies {
     implementation 'top.zibin:Luban:1.1.3'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 repositories {
     mavenCentral()
 }
-apply plugin: 'kotlin-android-extensions'
