--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,11 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:name=".GdydApplication"
         android:allowBackup="true"
@@ -17,22 +19,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".activity.MainActivity">
-            
+
         </activity>
-        <activity android:name=".activity.LoginActivity" >
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.DownloadMapActivity">
-        </activity>
+        <activity android:name=".activity.DownloadMapActivity"></activity>
         <activity android:name=".activity.CollectionActivity">
 
         </activity>
 
         <activity android:name=".activity.PoiDetail" />
-        <activity android:name=".activity.BuildingDetail" ></activity>
+        <activity android:name=".activity.BuildingDetail"></activity>
         <activity android:name=".activity.SocialDetail" />
         <activity android:name=".activity.VillageDetail" />
         <activity android:name=".activity.UploadDataActivity" />
