--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
-        maven {
-            url 'https://esri.bintray.com/arcgis'
-        }
+        maven { url 'https://esri.bintray.com/arcgis' }
     }
 }
 
