--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
     implementation 'com.android.support:multidex:1.0.3'
+    compile 'com.xw.repo:bubbleseekbar:3.16-lite'
 }
 
 repositories {
