--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,12 +29,11 @@
             android:name=".activity.CollectionActivity"
             android:launchMode="singleTask" />
         <activity android:name=".activity.PoiDetail" />
-        <activity android:name=".activity.BuildingDetail" />
         <activity android:name=".activity.SocialDetail" />
-        <activity android:name=".activity.VillageDetail" />
         <activity android:name=".activity.UploadDataActivity" />
         <activity android:name=".activity.ImageActivity" />
         <activity android:name=".activity.ChooseMapActivity" />
+        <activity android:name=".activity.LineDetail"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
