--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
         </provider>
 
         <activity android:name=".activity.VillageBorderActivity"></activity>
+        <activity android:name=".activity.QCListActivity" 
+            
+            />
+        <activity android:name=".activity.CaijiQCResultActivity" />
 
         <service android:name=".service.CopyService" />
     </application>
