外业修改错误信息

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
 
         <service android:name=".service.CopyService"/>
 
-        <activity android:name=".activity.ZhiJianCollectionActivity">
+        <activity android:name=".activity.CheckActivity">
         </activity>
     </application>
 
