--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            //添加此行代码，可以在release包下打印log  
+            debuggable true
         }
     }
 
