解决进入界面崩溃bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
+        }
     }
 
     greendao {
@@ -78,7 +81,7 @@ dependencies {
     }
     compile 'com.alibaba:fastjson:1.2.46'
     compile 'com.alibaba:fastjson:1.1.68.android'
-    implementation files('libs/jxl.jar')
+//    implementation files('libs/jxl.jar')
     compile 'net.zetetic:android-database-sqlcipher:3.5.7@aar'
 }
 
