--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao' // apply plugin
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'bugly'
 
 android {
     compileSdkVersion 26
@@ -45,6 +46,13 @@ android {
     }
 }
 
+bugly {
+    appId = '3637144ca2' // 注册时分配的App ID
+    appKey = 'e7a5b170-5280-4de4-a649-df75fd0233e7' // 注册时分配的App Key
+    appPackage='com.mapuni.gdydcaiji'
+    debug=false
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -83,6 +91,10 @@ dependencies {
     compile 'com.alibaba:fastjson:1.1.68.android'
 //    implementation files('libs/jxl.jar')
     compile 'net.zetetic:android-database-sqlcipher:3.5.7@aar'
+
+
+    compile 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
+    compile 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
 }
 
 repositories {
