--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" // add plugin
+        classpath 'com.tencent.bugly:symtabfileuploader:latest.release'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
