--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.esri.arcgis.android:arcgis-android:10.2.9'
-    compile 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.esri.arcgis.android:arcgis-android:10.2.9'
+    implementation 'org.greenrobot:greendao:3.2.2'
     // add library
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -80,21 +80,21 @@ dependencies {
     implementation 'top.zibin:Luban:1.1.3'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
     implementation 'com.android.support:multidex:1.0.3'
-    compile 'com.xw.repo:bubbleseekbar:3.16-lite'
-    compile('cn.qqtheme.framework:ColorPicker:latest.release') {
+    implementation 'com.xw.repo:bubbleseekbar:3.16-lite'
+    implementation('cn.qqtheme.framework:ColorPicker:latest.release') {
         exclude group: 'com.android.support'
     }
-    compile 'com.alibaba:fastjson:1.2.46'
-    compile 'com.alibaba:fastjson:1.1.68.android'
+    implementation 'com.alibaba:fastjson:1.2.46'
+    implementation 'com.alibaba:fastjson:1.1.68.android'
 //    implementation files('libs/jxl.jar')
-    compile 'net.zetetic:android-database-sqlcipher:3.5.7@aar'
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.7@aar'
 
 
-    compile 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
-    compile 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+    implementation 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
+    implementation 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
 }
 
 repositories {
