--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.DEVICE_POWER"
+        tools:ignore="ProtectedPermissions"/>
+
     <application
         android:name=".GdydApplication"
         android:allowBackup="true"
@@ -44,7 +48,8 @@
         <activity
             android:name=".activity.SocialDetail"
             android:theme="@style/DialogActivity" />
-        <activity android:name=".activity.UploadDataActivity" />
+        <activity android:name=".activity.UploadDataActivity"
+            />
         <activity android:name=".activity.ImageActivity" />
         <activity android:name=".activity.ChooseMapActivity" />
         <activity
